# parser_eve_db

./: .dockerignore  .gitignore  Dockerfile  README.md  celery_app.py  create.sh  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  docker-compose.yml.old  notes.txt  pyproject.toml
celerytasks/: tasks.py  testtasks.py
celerytasks/parser/: asynctimer.py  base_requests.py  conf.py  enter_entitys_to_db.py  errors.py  formed_list_ids.py  linker.py  parser_img.py  parser_main.py
compensation/: urls.py  views.py
config/: models.py  settings.py  urls.py
dbeve_items/: apps.py  models.py  urls.py  views.py
dbeve_items/migrations/: 0001_initial.py  0002_categories_groups_rename_items_types.py  0003_delete_categories_delete_groups_delete_shiptypes_and_more.py  0004_initial.py  0005_groups_category_groups_name_groups_published.py  0006_types_capacity_types_description_types_group_and_more.py  0007_alter_types_mass.py
dbeve_social/: admin.py  apps.py  models.py  urls.py  views.py
dbeve_social/migrations/: 0001_initial.py  0002_alter_alliancesicons_px128x128_and_more.py  0003_delete_alliancesicons.py  0004_initial.py  0005_alliances_nameicon.py  0006_corporations_characters_and_more.py  0007_remove_alliances_creator_corporation_and_more.py  0009_alliances_list_associated_corp.py  (+42 more)
dbeve_universe/: apps.py  models.py  services.py  urls.py  views.py
deploy/: base.gitignore
pages/: urls.py  views.py
requests_to_esi/: apps.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
templates/: _base.html
users/: admin.py  models.py
(+99 files in other folders)
